--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,17 +2,23 @@
 <html>
   <head>
     <title>LunchBot</title>
-    <%= stylesheet_link_tag    "application" %>
+    <%= stylesheet_link_tag    "application", "bootstrap-1.0.0" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <% if user_signed_in? %>
-      <%= current_user.email %> (<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>)
-    <% else %>
-      <%= link_to "Sign in", new_user_session_path %>/<%= link_to "Sign up", new_user_registration_path %>
-    <% end %>
+    <div class="container">
+      <div class="row" id="user_bar">
+        <% if user_signed_in? %>
+          Hello, <%= current_user.email %> (<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>)
+        <% else %>
+          <%= link_to "Sign in", new_user_session_path %>/<%= link_to "Sign up", new_user_registration_path %>
+        <% end %>
+      </div>
+      <div class="row">
+        <%= yield %>
+      </div>
+    </div>
 
-    <%= yield %>
   </body>
 </html>
